--- a/MPowerKit.Navigation.Core/MPowerKit.Navigation.Core.csproj
+++ b/MPowerKit.Navigation.Core/MPowerKit.Navigation.Core.csproj
@@ -5,6 +5,7 @@
 		<UseMaui>true</UseMaui>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<MauiVersion>8.0.3</MauiVersion>
 		
 		<RootNamespace>MPowerKit.Navigation</RootNamespace>
 
