--- a/Sample/Sample.csproj
+++ b/Sample/Sample.csproj
@@ -69,6 +69,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="FlyPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="PopupPageTest.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
